[package]
name = "bitbound"
version = "0.1.0"
edition = "2024"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
categories = []
description = "A Rust crate for safe, efficient array access with compile time boundary protection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/bitbound-rs"

[dependencies]
num-traits = "0.2.19"
